tests/expectations/compiler/dyn_record/dyn_record_ternary.out
Error [EPAR0370005]: expected 'record' -- found ','
    --> compiler-test:2:19
     |
   2 |     fn main(a: dyn, b: dyn, flag: bool) -> address {
     |                   ^
Error [EPAR0370005]: expected 'record' -- found ','
    --> compiler-test:2:27
     |
   2 |     fn main(a: dyn, b: dyn, flag: bool) -> address {
     |                           ^
Error [EPAR0370005]: expected 'record' -- found '='
    --> compiler-test:3:20
     |
   3 |         let r: dyn = flag ? a : b;
     |                    ^
